===================================
TSDuck Change Log and Release Notes
===================================

Version 3.5

- With tstables and plugin tables, it is possible to specify several formats
  at the same time. For instance, it is possible to save tables in text and
  binary format at the same time.

- The options --verbose and --debug have been generalized to all commands.

- For programmers, the TSDuck library API was extensively modified. All usage
  of 8-bit strings (char* and std::string) has been removed and replaced by
  Java-like Unicode strings (ts::UString). Many interface have been updated.
  The utilities in tsStringUtils have been removed. Equivalent services exist
  in class ts::UString. All of this break the backward compatibility of user
  code. This is unfortunate but TSDuck code is now more robust and faster to
  maintain.

- The "revision" number is no longer a "build date" but a "commit count".
  With a build date, there was a risk that two identical sets of sources had
  different revision numbers and that that two different sets of sources had
  identical revision numbers. The new "commit count" which is automatically
  generated by git is a global commit count of all branches and is always
  increased. It represents a set of commited sources. Moreover, each object
  file contains the revision number at the time of compilation. The downside
  is that each commit forces a recompilation of everything since the revision
  is automatically increased.

Version 3.4-20171110

- TSDuck now fully handles DVB character sets in signalization. All textual
  display (tsanalyze, tstables, etc.) are produced in UTF-8 format, with
  characters properly translated from DVB character encoding. The table
  compiler, tstabcomp, properly translates from UTF-8 XML files to DVB
  character encoding and vice versa.

- Added options --default-charset and --europe to tspsi, tstables, tstabdump,
  tstabcomp, plugin psi and plugin tables.
