@@ -8,6 +8,8 @@ Version 3.5
   at the same time. For instance, it is possible to save tables in text and
   binary format at the same time.
 
+- Added option --byte to tsftrunc.
+
 - The options --verbose and --debug have been generalized to all commands.
 
 - For programmers, the TSDuck library API was extensively modified. All usage
